--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
